{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 68,
  "lineage": "cec68007-2fc8-9458-e276-c50afeafe896",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "lab-api-prod-alb-access-logs-948806325010",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:948806325010:loadbalancer/app/lab-api-prod-alb/5d63ab01d3d83916",
            "arn_suffix": "app/lab-api-prod-alb/5d63ab01d3d83916",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lab-api-prod-alb-1767188518.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:948806325010:loadbalancer/app/lab-api-prod-alb/5d63ab01d3d83916",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lab-api-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09813a496ce5d4c2c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0981e40275f0141a7"
              },
              {
                "subnet_id": "subnet-0b16640560ee7362d"
              }
            ],
            "subnets": [
              "subnet-0981e40275f0141a7",
              "subnet-0b16640560ee7362d"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "alb",
              "Name": "lab-api-prod-alb",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "alb",
              "Name": "lab-api-prod-alb",
              "Project": "lab-api"
            },
            "vpc_id": "vpc-069ce190ac2e4c6b0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_s3_bucket.alb_logs",
            "module.alb.aws_s3_bucket_policy.alb_logs",
            "module.alb.aws_security_group.alb",
            "module.alb.data.aws_caller_identity.current",
            "module.alb.data.aws_elb_service_account.main",
            "module.alb.data.aws_iam_policy_document.alb_logs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:948806325010:listener/app/lab-api-prod-alb/5d63ab01d3d83916/919115b967675ebe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:948806325010:targetgroup/lab-api-prod-tg/161a286c758a2b4f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:948806325010:listener/app/lab-api-prod-alb/5d63ab01d3d83916/919115b967675ebe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:948806325010:loadbalancer/app/lab-api-prod-alb/5d63ab01d3d83916",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "alb",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "alb",
              "Project": "lab-api"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_s3_bucket.alb_logs",
            "module.alb.aws_s3_bucket_policy.alb_logs",
            "module.alb.aws_security_group.alb",
            "module.alb.data.aws_caller_identity.current",
            "module.alb.data.aws_elb_service_account.main",
            "module.alb.data.aws_iam_policy_document.alb_logs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:948806325010:targetgroup/lab-api-prod-tg/161a286c758a2b4f",
            "arn_suffix": "targetgroup/lab-api-prod-tg/161a286c758a2b4f",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:948806325010:targetgroup/lab-api-prod-tg/161a286c758a2b4f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:948806325010:loadbalancer/app/lab-api-prod-alb/5d63ab01d3d83916"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lab-api-prod-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "alb",
              "Name": "lab-api-prod-tg",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "alb",
              "Name": "lab-api-prod-tg",
              "Project": "lab-api"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-069ce190ac2e4c6b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:security-group/sg-09813a496ce5d4c2c",
            "description": "Controls access to the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow outbound traffic to ECS tasks on the container port within the VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-09813a496ce5d4c2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP from allowed clients",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab-api-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "948806325010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "alb",
              "Name": "lab-api-prod-alb-sg",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "alb",
              "Name": "lab-api-prod-alb-sg",
              "Project": "lab-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ce190ac2e4c6b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "to_ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:security-group-rule/sgr-0bf6b517ea923f430",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic to ECS tasks on the container port within the VPC",
            "from_port": 8080,
            "id": "sgr-0bf6b517ea923f430",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09813a496ce5d4c2c",
            "security_group_rule_id": "sgr-0bf6b517ea923f430",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "lab-api"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:security-group-rule/sgr-0542c93f28628c2fc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow inbound HTTP from allowed clients",
            "from_port": 80,
            "id": "sgr-0542c93f28628c2fc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09813a496ce5d4c2c",
            "security_group_rule_id": "sgr-0542c93f28628c2fc",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "lab-api"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:security-group/sg-0d9b344d30436c268",
            "description": "Controls access to ECS tasks running in private subnets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow DNS resolution (UDP)",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS egress for ECR pulls, AWS API calls, and external dependencies via NAT",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0d9b344d30436c268",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from the ALB on the container port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09813a496ce5d4c2c"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "lab-api-prod-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "948806325010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "lab-api-prod-ecs-tasks-sg",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "lab-api-prod-ecs-tasks-sg",
              "Project": "lab-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ce190ac2e4c6b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dns_udp_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:security-group-rule/sgr-0637b78088f80eefe",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow DNS resolution (UDP)",
            "from_port": 53,
            "id": "sgr-0637b78088f80eefe",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d9b344d30436c268",
            "security_group_rule_id": "sgr-0637b78088f80eefe",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "lab-api"
            },
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.ecs_tasks",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "https_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:security-group-rule/sgr-011be38c41af9f75e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS egress for ECR pulls, AWS API calls, and external dependencies via NAT",
            "from_port": 443,
            "id": "sgr-011be38c41af9f75e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d9b344d30436c268",
            "security_group_rule_id": "sgr-011be38c41af9f75e",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "lab-api"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.ecs_tasks",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:security-group-rule/sgr-05d4622c36c898e68",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow inbound traffic from the ALB on the container port",
            "from_port": 8080,
            "id": "sgr-05d4622c36c898e68",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09813a496ce5d4c2c",
            "security_group_id": "sg-0d9b344d30436c268",
            "security_group_rule_id": "sgr-05d4622c36c898e68",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "lab-api"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.ecs.aws_security_group.ecs_tasks",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1595a65efd9cd94",
            "arn": "arn:aws:ec2:us-east-1:948806325010:elastic-ip/eipalloc-0f1595a65efd9cd94",
            "association_id": "eipassoc-05a9cc6f93cf2962a",
            "domain": "vpc",
            "id": "eipalloc-0f1595a65efd9cd94",
            "network_border_group": "us-east-1",
            "network_interface": "eni-030ded477f302e70f",
            "private_dns": "ip-10-0-0-251.ec2.internal",
            "private_ip": "10.0.0.251",
            "public_dns": "ec2-52-21-149-80.compute-1.amazonaws.com",
            "public_ip": "52.21.149.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-nat-eip-0",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-nat-eip-0",
              "Project": "lab-api"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08bfa9d2f4852bc1f",
            "arn": "arn:aws:ec2:us-east-1:948806325010:elastic-ip/eipalloc-08bfa9d2f4852bc1f",
            "association_id": "eipassoc-08ce8565692f595b1",
            "domain": "vpc",
            "id": "eipalloc-08bfa9d2f4852bc1f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-007e0dc147ac2ce77",
            "private_dns": "ip-10-0-1-88.ec2.internal",
            "private_ip": "10.0.1.88",
            "public_dns": "ec2-100-63-3-14.compute-1.amazonaws.com",
            "public_ip": "100.63.3.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-nat-eip-1",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-nat-eip-1",
              "Project": "lab-api"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:internet-gateway/igw-05b24f494b2131230",
            "id": "igw-05b24f494b2131230",
            "owner_id": "948806325010",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-igw",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-igw",
              "Project": "lab-api"
            },
            "vpc_id": "vpc-069ce190ac2e4c6b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1595a65efd9cd94",
            "association_id": "eipassoc-05a9cc6f93cf2962a",
            "connectivity_type": "public",
            "id": "nat-0bbc296257e063bbb",
            "network_interface_id": "eni-030ded477f302e70f",
            "private_ip": "10.0.0.251",
            "public_ip": "52.21.149.80",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0981e40275f0141a7",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-nat-0",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-nat-0",
              "Project": "lab-api"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08bfa9d2f4852bc1f",
            "association_id": "eipassoc-08ce8565692f595b1",
            "connectivity_type": "public",
            "id": "nat-0e4b411e7a2795e59",
            "network_interface_id": "eni-007e0dc147ac2ce77",
            "private_ip": "10.0.1.88",
            "public_ip": "100.63.3.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b16640560ee7362d",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-nat-1",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-nat-1",
              "Project": "lab-api"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09b9fc9a7ac5d2fd71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bbc296257e063bbb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b9fc9a7ac5d2fd7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09094664e14347bf51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e4b411e7a2795e59",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09094664e14347bf5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05b24f494b2131230",
            "id": "r-rtb-070312518d98067de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070312518d98067de",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:route-table/rtb-09b9fc9a7ac5d2fd7",
            "id": "rtb-09b9fc9a7ac5d2fd7",
            "owner_id": "948806325010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bbc296257e063bbb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-private-rt-us-east-1a",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-private-rt-us-east-1a",
              "Project": "lab-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ce190ac2e4c6b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:route-table/rtb-09094664e14347bf5",
            "id": "rtb-09094664e14347bf5",
            "owner_id": "948806325010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e4b411e7a2795e59",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-private-rt-us-east-1b",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-private-rt-us-east-1b",
              "Project": "lab-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ce190ac2e4c6b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:route-table/rtb-070312518d98067de",
            "id": "rtb-070312518d98067de",
            "owner_id": "948806325010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b24f494b2131230",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-public-rt",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-public-rt",
              "Project": "lab-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ce190ac2e4c6b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bc4cf426d9af7dc",
            "route_table_id": "rtb-09b9fc9a7ac5d2fd7",
            "subnet_id": "subnet-0070a2636e8ecaea1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be92df2a36a30d8b",
            "route_table_id": "rtb-09094664e14347bf5",
            "subnet_id": "subnet-02064b8632c9ebb03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e093ed0613addc4e",
            "route_table_id": "rtb-070312518d98067de",
            "subnet_id": "subnet-0981e40275f0141a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03290163cd5ee6c79",
            "route_table_id": "rtb-070312518d98067de",
            "subnet_id": "subnet-0b16640560ee7362d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:subnet/subnet-0070a2636e8ecaea1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0070a2636e8ecaea1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948806325010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-private-us-east-1a",
              "Project": "lab-api",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-private-us-east-1a",
              "Project": "lab-api",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-069ce190ac2e4c6b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:subnet/subnet-02064b8632c9ebb03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02064b8632c9ebb03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948806325010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-private-us-east-1b",
              "Project": "lab-api",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-private-us-east-1b",
              "Project": "lab-api",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-069ce190ac2e4c6b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:subnet/subnet-0981e40275f0141a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0981e40275f0141a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948806325010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-public-us-east-1a",
              "Project": "lab-api",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-public-us-east-1a",
              "Project": "lab-api",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-069ce190ac2e4c6b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:subnet/subnet-0b16640560ee7362d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b16640560ee7362d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948806325010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-public-us-east-1b",
              "Project": "lab-api",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-public-us-east-1b",
              "Project": "lab-api",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-069ce190ac2e4c6b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948806325010:vpc/vpc-069ce190ac2e4c6b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056ce92c0b44e70d8",
            "default_route_table_id": "rtb-07edc0ec76b652434",
            "default_security_group_id": "sg-027bc69b9ec37ebf3",
            "dhcp_options_id": "dopt-055583bc1b15a2af0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069ce190ac2e4c6b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07edc0ec76b652434",
            "owner_id": "948806325010",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-vpc",
              "Project": "lab-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "lab-api-prod-vpc",
              "Project": "lab-api"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}